--- a/bw-web/package.json
+++ b/bw-web/package.json
@@ -28,6 +28,7 @@
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
     "tailwindcss": "^4.1.13",
+    "tailwindcss-aria-attributes": "^2.0.1",
     "typescript": "^5.9.2",
     "vite": "^7.1.7",
     "vite-tsconfig-paths": "^5.1.4"
