--- a/bw-web/package.json
+++ b/bw-web/package.json
@@ -3,17 +3,24 @@
   "type": "module",
   "scripts": {
     "build": "react-router build",
-    "dev": "react-router dev",
-    "start": "react-router-serve ./build/server/index.js",
-    "typecheck": "react-router typegen && tsc"
+    "db:generate": "dotenv -- drizzle-kit generate",
+    "db:migrate": "dotenv -- drizzle-kit migrate",
+    "dev": "dotenv -- node server.js",
+    "start": "node server.js",
+    "typecheck": "react-router typegen && tsc -b"
   },
   "dependencies": {
     "@headlessui/react": "^2.2.9",
     "@react-router/fs-routes": "^7.9.4",
     "@react-router/node": "^7.9.2",
     "@react-router/serve": "^7.9.2",
+    "compression": "^1.8.1",
+    "drizzle-orm": "^0.44.6",
+    "express": "^5.1.0",
     "isbot": "^5.1.31",
     "lucide-react": "^0.545.0",
+    "morgan": "^1.10.1",
+    "postgres": "^3.4.7",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router": "^7.9.2",
@@ -23,9 +30,15 @@
   "devDependencies": {
     "@react-router/dev": "^7.9.2",
     "@tailwindcss/vite": "^4.1.13",
-    "@types/node": "^22",
+    "@types/compression": "^1.8.1",
+    "@types/express": "^5.0.3",
+    "@types/express-serve-static-core": "^5.1.0",
+    "@types/morgan": "^1.9.10",
+    "@types/node": "^22.18.10",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
+    "dotenv-cli": "^10.0.0",
+    "drizzle-kit": "^0.31.5",
     "tailwindcss": "^4.1.13",
     "typescript": "^5.9.2",
     "vite": "^7.1.7",
