--- a/compose.prod.yaml
+++ b/compose.prod.yaml
@@ -2,16 +2,53 @@ name: boswaves
 
 services:
   web:
+    image: bw/website:latest
+    container_name: bw-web
     build:
       context: ./bw-web
       dockerfile: Dockerfile
-    image: bw/website:latest
-    container_name: bw-web
     networks:
     - host_net
+    - postgres_net
     ports:
     - 3000:3000
+
+  postgres:
+    image: bw/postgres:latest
+    container_name: bw-postgres
+    build:
+      context: ./services/postgres
+      dockerfile: Dockerfile
+    environment:
+    - POSTGRES_DB=${PG_DATABASE}
+    - POSTGRES_USER=${PG_USERNAME}
+    - POSTGRES_PASSWORD=${PG_PASSWORD}
+    volumes:
+    - postgres_vol:/var/lib/postgresql/data
+    networks:
+    - postgres_net
+    ports:
+    - 4000:5432
+    healthcheck:
+      test: [ "CMD-SHELL", "sh -c 'pg_isready -U ${PG_USERNAME} -d ${PG_DATABASE}'" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 30s
+
+volumes:
+  postgres_vol:
+    driver: local
+  pgadmin_vol:
+    driver: local
+  # prometheus_vol:
+  #   driver: local
+  # grafana_vol:
+  #   driver: local
 
 networks:
   host_net:
     driver: bridge
+  postgres_net:
+    driver: bridge
+    internal: true
