--- a/bw-web/tsconfig.vite.json
+++ b/bw-web/tsconfig.vite.json
@@ -7,7 +7,7 @@
     "app/**/.client/**/*",
     "database/**/*",
     "server/**/*",
-    "drizzle/**/*",
+    "libs/**/*",
   ],
   "compilerOptions": {
     "composite": true,
@@ -21,7 +21,7 @@
     "rootDirs": [".", "./.react-router/types"],
     "baseUrl": ".",
     "paths": {
-      "~/drizzle/*": ["./drizzle/*"],
+      "~/libs/*": ["./libs/*"],
       "~/*": ["./app/*"]
     },
     "esModuleInterop": true,
