--- a/compose.prod.yaml
+++ b/compose.prod.yaml
@@ -7,6 +7,8 @@ services:
     build:
       context: ./bw-web
       dockerfile: Dockerfile
+    env_file:
+    - ./.env
     networks:
     - host_net
     - postgres_net
