--- a/compose.dev.yaml
+++ b/compose.dev.yaml
@@ -1,23 +1,14 @@
 name: boswaves
 
 services:
-  web:
-    image: bw/website:latest
-    container_name: bw-web
-    build:
-      context: ./bw-web
-      dockerfile: Dockerfile
-    networks:
-    - host_net
-    ports:
-    - 3000:3000
-
   postgres:
     image: bw/postgres:latest
     container_name: bw-postgres
     build:
       context: ./services/postgres
       dockerfile: Dockerfile
+    ports:
+    - 5432:5432
     environment:
     - POSTGRES_DB=${PG_DATABASE}
     - POSTGRES_USER=${PG_USERNAME}
@@ -26,8 +17,6 @@ services:
     - postgres_vol:/var/lib/postgresql/data
     networks:
     - host_net
-    ports:
-    - 5432:5432
     healthcheck:
       test: [ "CMD-SHELL", "sh -c 'pg_isready -U ${PG_USERNAME} -d ${PG_DATABASE}'" ]
       interval: 10s
@@ -51,6 +40,25 @@ services:
       postgres:
         condition: service_healthy
 
+  web:
+    image: bw/website:latest
+    container_name: bw-web
+    build:
+      context: ./bw-web
+      dockerfile: Dockerfile
+    environment:
+    - PG_PORT=5432
+    - PG_HOST=postgres
+    - PG_USERNAME=${PG_USERNAME}
+    - PG_PASSWORD=${PG_PASSWORD}
+    - PG_DATABASE=${PG_DATABASE}
+    networks:
+    - host_net
+    ports:
+    - 3000:3000
+    depends_on:
+      postgres:
+        condition: service_healthy
 volumes:
   postgres_vol:
     driver: local
