--- a/compose.prod.yaml
+++ b/compose.prod.yaml
@@ -1,20 +1,6 @@
 name: boswaves
 
 services:
-  web:
-    image: bw/website:latest
-    container_name: bw-web
-    build:
-      context: ./bw-web
-      dockerfile: Dockerfile
-    env_file:
-    - ./.env
-    networks:
-    - host_net
-    - postgres_net
-    ports:
-    - 3000:3000
-
   postgres:
     image: bw/postgres:latest
     container_name: bw-postgres
@@ -47,12 +33,32 @@ services:
     volumes:
     - pgadmin_vol:/var/lib/pgadmin
     networks:
-    - postgres_net
     - host_net
+    - postgres_net
     depends_on:
       postgres:
         condition: service_healthy
 
+  web:
+    image: bw/website:latest
+    container_name: bw-web
+    build:
+      context: ./bw-web
+      dockerfile: Dockerfile
+    environment:
+    - PG_PORT=5432
+    - PG_HOST=postgres
+    - PG_USERNAME=${PG_USERNAME}
+    - PG_PASSWORD=${PG_PASSWORD}
+    - PG_DATABASE=${PG_DATABASE}
+    networks:
+    - host_net
+    - postgres_net
+    ports:
+    - 3000:3000
+    depends_on:
+      postgres:
+        condition: service_healthy
 volumes:
   postgres_vol:
     driver: local
@@ -68,3 +74,4 @@ networks:
     driver: bridge
   postgres_net:
     driver: bridge
+    internal: true
