--- a/bw-web/package.json
+++ b/bw-web/package.json
@@ -18,6 +18,9 @@
     "@react-router/fs-routes": "^7.9.4",
     "@react-router/node": "^7.9.2",
     "@react-router/serve": "^7.9.2",
+    "@stripe/react-stripe-js": "^5.2.0",
+    "@stripe/stripe-js": "^8.1.0",
+    "chargebee": "^3.14.0",
     "compression": "^1.8.1",
     "drizzle-orm": "^0.44.6",
     "express": "^5.1.0",
@@ -28,6 +31,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router": "^7.9.2",
+    "stripe": "^19.1.0",
     "tailwind-merge": "^3.3.1",
     "tailwind-variants": "^3.1.1"
   },
