--- a/bw-web/package.json
+++ b/bw-web/package.json
@@ -27,6 +27,7 @@
     "isbot": "^5.1.31",
     "lucide-react": "^0.545.0",
     "morgan": "^1.10.1",
+    "node-cache": "^5.1.2",
     "postgres": "^3.4.7",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
