--- a/web/tsconfig.vite.json
+++ b/web/tsconfig.vite.json
@@ -2,9 +2,9 @@
   "extends": "./tsconfig.json",
   "include": [
     ".react-router/types/**/*",
-    "app/**/*",
-    "app/**/.server/**/*",
-    "app/**/.client/**/*",
+    "lib/**/*",
+    "lib/**/.server/**/*",
+    "lib/**/.client/**/*",
     "core/**/*",
     "admin/**/*",
     "server/**/*",
@@ -12,16 +12,35 @@
   "compilerOptions": {
     "composite": true,
     "strict": true,
-    "lib": ["DOM", "DOM.Iterable", "ES2022"],
-    "types": ["vite/client"],
+    "lib": [
+      "DOM",
+      "DOM.Iterable",
+      "ES2022"
+    ],
+    "types": [
+      "vite/client"
+    ],
     "target": "ES2022",
     "module": "ES2022",
     "moduleResolution": "bundler",
     "jsx": "react-jsx",
-    "rootDirs": [".", "./.react-router/types"],
+    "rootDirs": [
+      ".",
+      "./.react-router/types"
+    ],
     "paths": {
-      "~/*": ["./app/*"],
-      "~/core/*": ["./core/*"]
+      "~/*": [
+        "./lib/store/*"
+      ],
+      "~/core/*": [
+        "./lib/core/*"
+      ],
+      "~/store/*": [
+        "./lib/store/*"
+      ],
+      "~/studio/*": [
+        "./lib/studio/*"
+      ]
     },
     "esModuleInterop": true,
     "resolveJsonModule": true
