--- a/web/package.json
+++ b/web/package.json
@@ -8,13 +8,13 @@
     "dev": "dotenv -- node server.js"
   },
   "dependencies": {
-    "@bw/core": "workspace:^",
     "@coingecko/cryptoformat": "^0.8.2",
     "@headlessui/react": "^2.2.9",
     "@react-router/express": "^7.9.4",
     "@react-router/fs-routes": "^7.9.4",
     "@react-router/node": "^7.9.2",
     "@react-router/serve": "^7.9.2",
+    "async_hooks": "^1.0.0",
     "chargebee": "^3.14.0",
     "compression": "^1.8.1",
     "drizzle-orm": "^0.44.6",
@@ -44,6 +44,7 @@
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
     "dotenv-cli": "^10.0.0",
+    "drizzle-kit": "^0.31.5",
     "tailwindcss": "^4.1.13",
     "tsx": "^4.20.6",
     "typescript": "^5.9.2",
