--- a/web/tsconfig.vite.json
+++ b/web/tsconfig.vite.json
@@ -5,8 +5,6 @@
     "lib/**/*",
     "lib/**/.server/**/*",
     "lib/**/.client/**/*",
-    "core/**/*",
-    "admin/**/*",
     "server/**/*",
   ],
   "compilerOptions": {
@@ -29,17 +27,14 @@
       "./.react-router/types"
     ],
     "paths": {
-      "~/*": [
-        "./lib/store/*"
+      "~/shared/*": [
+        "./lib/shared/*"
       ],
-      "~/core/*": [
-        "./lib/core/*"
+      "~/public/*": [
+        "./lib/public/*"
       ],
-      "~/store/*": [
-        "./lib/store/*"
-      ],
-      "~/studio/*": [
-        "./lib/studio/*"
+      "~/admin/*": [
+        "./lib/admin/*"
       ]
     },
     "esModuleInterop": true,
