--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -5,10 +5,10 @@
     { "path": "./tsconfig.vite.json" }
   ],
   "compilerOptions": {
+    "composite": true,
     "checkJs": true,
     "verbatimModuleSyntax": true,
     "skipLibCheck": true,
     "strict": true,
-    "noEmit": true
   }
 }
