--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@types/express": "^5.0.3",
         "@types/node": "^24.9.0",
         "drizzle-kit": "^0.31.5",
+        "dotenv-cli": "^10.0.0",
         "tsx": "^4.20.6",
         "typescript": "^5.9.2"
     }
