--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,23 @@
 {
   "files": [],
   "references": [
-    { "path": "./apps/web/tsconfig.json" },
+    {
+      "path": "./apps/web/tsconfig.json"
+    },
+  ],
+  "include": [
+    "./core/**/*"
+  ],
+  "exclude": [
+    "node_modules",
   ],
   "compilerOptions": {
+    "lib": [
+      "ES2022"
+    ],
+    "target": "ES2022",
+    "module": "ES2022",
+    "moduleResolution": "bundler",
     "checkJs": true,
     "verbatimModuleSyntax": true,
     "skipLibCheck": true,
