--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,8 +22,13 @@
     "verbatimModuleSyntax": true,
     "skipLibCheck": true,
     "strict": true,
-    "noEmit": true
-  }
+    "noEmit": true,
+    "paths": {
+      "~/": [
+        "./core/*"
+      ]
+    }
+  },
 }
 // {
 //   "references": [
