--- a/apps/web/tsconfig.vite.json
+++ b/apps/web/tsconfig.vite.json
@@ -5,31 +5,24 @@
     "app/**/*",
     "app/**/.server/**/*",
     "app/**/.client/**/*",
-    "server/**/*",
+    "database/**/*",
+    "server/**/*"
   ],
   "compilerOptions": {
     "composite": true,
     "strict": true,
-    "lib": [
-      "DOM",
-      "DOM.Iterable",
-      "ES2022"
-    ],
-    "types": [
-      "vite/client"
-    ],
+    "noEmit": false,
+    "lib": ["DOM", "DOM.Iterable", "ES2022"],
+    "types": ["vite/client"],
     "target": "ES2022",
     "module": "ES2022",
     "moduleResolution": "bundler",
     "jsx": "react-jsx",
-    "rootDirs": [
-      ".",
-      "./.react-router/types"
-    ],
+    "baseUrl": ".",
+    "rootDirs": [".", "./.react-router/types"],
     "paths": {
-      "~/*": [
-        "./app/*"
-      ],
+      "~/database/*": ["./database/*"],
+      "~/*": ["./app/*"]
     },
     "esModuleInterop": true,
     "resolveJsonModule": true
