--- a/apps/admin/tsconfig.json
+++ b/apps/admin/tsconfig.json
@@ -1,14 +1,14 @@
 {
   "files": [],
+  "extends": "../../tsconfig.json",
   "references": [
-    { "path": "./apps/web/tsconfig.json" },
-    { "path": "./apps/admin/tsconfig.json" },
+    { "path": "./tsconfig.vite.json" },
+    { "path": "./tsconfig.node.json" },
   ],
   "compilerOptions": {
     "checkJs": true,
     "verbatimModuleSyntax": true,
     "skipLibCheck": true,
     "strict": true,
-    "noEmit": true
   },
 }
