--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,13 +2,10 @@
   "files": [],
   "references": [
     {
-      "path": "./core/tsconfig.json"
+      "path": "./tsconfig.node.json"
     },
     {
-      "path": "./apps/web/tsconfig.json"
-    },
-    {
-      "path": "./apps/admin/tsconfig.json"
+      "path": "./tsconfig.react.json"
     },
   ],
   "compilerOptions": {
@@ -16,6 +13,6 @@
     "verbatimModuleSyntax": true,
     "skipLibCheck": true,
     "strict": true,
-    "noEmit": true
+    "noEmit": true,
   },
 }
