--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -11,26 +11,67 @@
     "@bw/core": "workspace:*",
     "@coingecko/cryptoformat": "^0.8.2",
     "@headlessui/react": "^2.2.9",
+    "@radix-ui/react-accordion": "^1.2.12",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
+    "@radix-ui/react-aspect-ratio": "^1.1.7",
+    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-checkbox": "^1.3.3",
+    "@radix-ui/react-collapsible": "^1.1.12",
+    "@radix-ui/react-context-menu": "^2.2.16",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-hover-card": "^1.1.15",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-menubar": "^1.1.16",
+    "@radix-ui/react-navigation-menu": "^1.2.14",
+    "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-progress": "^1.1.7",
+    "@radix-ui/react-radio-group": "^1.3.8",
+    "@radix-ui/react-scroll-area": "^1.2.10",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slider": "^1.3.6",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.6",
+    "@radix-ui/react-tabs": "^1.1.13",
+    "@radix-ui/react-toggle": "^1.1.10",
+    "@radix-ui/react-toggle-group": "^1.1.11",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@react-router/express": "^7.9.4",
     "@react-router/fs-routes": "^7.9.4",
     "@react-router/node": "^7.9.2",
     "@react-router/serve": "^7.9.2",
+    "@refinedev/cli": "^2.16.50",
+    "@refinedev/core": "^5.0.5",
+    "@refinedev/kbar": "^2.0.1",
+    "@refinedev/react-router": "^2.0.3",
     "async_hooks": "^1.0.0",
     "chargebee": "^3.14.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "compression": "^1.8.1",
     "drizzle-orm": "^0.44.6",
     "drizzle-zod": "^0.8.3",
+    "embla-carousel-react": "^8.6.0",
     "express": "^5.1.0",
+    "input-otp": "^1.4.2",
     "isbot": "^5.1.31",
     "lucide-react": "^0.545.0",
     "morgan": "^1.10.1",
     "postgres": "^3.4.7",
     "react": "^19.1.1",
+    "react-day-picker": "^9.11.1",
     "react-dom": "^19.1.1",
+    "react-hook-form": "^7.66.0",
+    "react-resizable-panels": "^3.0.6",
     "react-router": "^7.9.5",
+    "recharts": "^3.3.0",
     "stripe": "^19.1.0",
     "tailwind-merge": "^3.3.1",
-    "tailwind-variants": "^3.1.1"
+    "tailwind-variants": "^3.1.1",
+    "tw-animate-css": "^1.2.5",
+    "vaul": "^1.1.2"
   },
   "devDependencies": {
     "@react-router/dev": "^7.9.1",
@@ -44,6 +85,7 @@
     "@types/react-dom": "^19.1.9",
     "dotenv-cli": "^10.0.0",
     "drizzle-kit": "^0.31.5",
+    "tailwind": "^4.0.0",
     "tailwindcss": "^4.1.13",
     "tsx": "^4.20.6",
     "typescript": "^5.9.2",
