setup complete migration pt.2

--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -44,7 +44,11 @@
     "@refinedev/cli": "^2.16.50",
     "@refinedev/core": "^5.0.5",
     "@refinedev/kbar": "^2.0.1",
+    "@refinedev/react-hook-form": "^5.0.2",
     "@refinedev/react-router": "^2.0.3",
+    "@refinedev/react-table": "^6.0.1",
+    "@refinedev/simple-rest": "^6.0.1",
+    "@tanstack/react-table": "^8.21.3",
     "async_hooks": "^1.0.0",
     "chargebee": "^3.14.0",
     "class-variance-authority": "^0.7.1",
@@ -57,6 +61,8 @@
     "express": "^5.1.0",
     "input-otp": "^1.4.2",
     "isbot": "^5.1.31",
+    "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
     "lucide-react": "^0.545.0",
     "morgan": "^1.10.1",
     "postgres": "^3.4.7",
@@ -79,6 +85,7 @@
     "@types/compression": "^1.8.1",
     "@types/express": "^5.0.3",
     "@types/express-serve-static-core": "^5.1.0",
+    "@types/lodash-es": "^4.17.12",
     "@types/morgan": "^1.9.10",
     "@types/node": "^22.18.10",
     "@types/react": "^19.1.13",
