--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
         "drizzle-orm": "^0.44.6"
     },
     "devDependencies": {
-        "drizzle-kit": "^0.31.5",
+        "@types/node": "^22.18.10",
         "dotenv-cli": "^10.0.0",
+        "drizzle-kit": "^0.31.5",
         "typescript": "^5.9.2"
     }
 }
