basic items route

--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,6 +1,6 @@
 {
     "extends": "./tsconfig.json",
-    "include": ["drizzle.config.ts"],
+    // "files": ["./drizzle.config.ts"],
     "references": [
         {
             "path": "./apps/web/tsconfig.node.json"
@@ -12,7 +12,6 @@
     "compilerOptions": {
         "composite": true,
         "strict": true,
-        "noEmit": false,
         "types": [
             "node"
         ],
