--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -59,6 +59,7 @@
     "drizzle-zod": "^0.8.3",
     "embla-carousel-react": "^8.6.0",
     "express": "^5.1.0",
+    "human-time": "^0.0.2",
     "input-otp": "^1.4.2",
     "isbot": "^5.1.31",
     "lodash": "^4.17.21",
@@ -85,6 +86,7 @@
     "@types/compression": "^1.8.1",
     "@types/express": "^5.0.3",
     "@types/express-serve-static-core": "^5.1.0",
+    "@types/lodash": "^4.17.20",
     "@types/lodash-es": "^4.17.12",
     "@types/morgan": "^1.9.10",
     "@types/node": "^22.18.10",
