--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -49,6 +49,7 @@
     "@refinedev/react-table": "^6.0.1",
     "@refinedev/simple-rest": "^6.0.1",
     "@tanstack/react-table": "^8.21.3",
+    "argon2": "^0.44.0",
     "async_hooks": "^1.0.0",
     "chargebee": "^3.14.0",
     "class-variance-authority": "^0.7.1",
