--- a/core/package.json
+++ b/core/package.json
@@ -17,7 +17,8 @@
     "morgan": "^1.10.1",
     "postgres": "^3.4.7",
     "tailwind-merge": "^3.3.1",
-    "tailwind-variants": "^3.1.1"
+    "tailwind-variants": "^3.1.1",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@types/compression": "^1.8.1",
