--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -80,7 +80,8 @@
     "tailwind-variants": "^3.1.1",
     "tw-animate-css": "^1.2.5",
     "vaul": "^1.1.2",
-    "zod": "^4.1.12"
+    "zod": "^4.1.12",
+    "zod-form-data": "^3.0.1"
   },
   "devDependencies": {
     "@react-router/dev": "^7.9.1",
