--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -35,6 +35,7 @@
     "stripe": "^19.1.0",
     "tailwind-merge": "^3.3.1",
     "tailwind-variants": "^3.1.1",
+    "tw-animate-css": "^1.2.5",
     "zod": "^4.1.12",
     "zod-form-data": "^3.0.1"
   },
