--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -104,6 +104,7 @@
     "dotenv-cli": "^10.0.0",
     "drizzle-kit": "^0.31.5",
     "tailwind": "^4.0.0",
+    "tailwind-scrollbar": "^4.0.2",
     "tailwindcss": "^4.1.13",
     "tsx": "^4.20.6",
     "typescript": "^5.9.2",
