--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -23,6 +23,8 @@
     "drizzle-orm": "^0.44.6",
     "drizzle-zod": "^0.8.3",
     "express": "^5.1.0",
+    "fast-geoip": "^1.1.88",
+    "geoip-lite": "^1.4.10",
     "isbot": "^5.1.31",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
