--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -29,6 +29,7 @@
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
     "lucide-react": "^0.545.0",
+    "maxmind": "^5.0.1",
     "morgan": "^1.10.1",
     "postgres": "^3.4.7",
     "react": "^19.1.1",
