--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -70,6 +70,7 @@
     "lucide-react": "^0.545.0",
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
+    "next-themes": "^0.4.6",
     "postgres": "^3.4.7",
     "react": "^19.1.1",
     "react-day-picker": "^9.11.1",
@@ -78,6 +79,7 @@
     "react-resizable-panels": "^3.0.6",
     "react-router": "^7.9.5",
     "recharts": "^3.3.0",
+    "sonner": "^2.0.7",
     "stripe": "^19.1.0",
     "tailwind-merge": "^3.3.1",
     "tailwind-variants": "^3.1.1",
