--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -19,6 +19,7 @@
     "@react-router/serve": "^7.9.2",
     "async_hooks": "^1.0.0",
     "chargebee": "^3.14.0",
+    "clsx": "^2.1.1",
     "compression": "^1.8.1",
     "country-to-currency": "^2.0.2",
     "drizzle-orm": "^0.44.6",
