--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,6 +12,9 @@
     "@coingecko/cryptoformat": "^0.8.2",
     "@headlessui/react": "^2.2.9",
     "@radix-ui/react-checkbox": "^1.3.3",
+    "@radix-ui/react-collapsible": "^1.1.12",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@react-router/express": "^7.9.4",
     "@react-router/fs-routes": "^7.9.4",
@@ -26,6 +29,7 @@
     "drizzle-zod": "^0.8.3",
     "express": "^5.1.0",
     "fast-geoip": "^1.1.88",
+    "framer-motion": "^12.23.26",
     "geoip-lite": "^1.4.10",
     "isbot": "^5.1.31",
     "lodash": "^4.17.21",
@@ -37,10 +41,11 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router": "^7.9.5",
+    "react-use-measure": "^2.1.7",
     "stripe": "^19.1.0",
     "tailwind-merge": "^3.3.1",
     "tailwind-variants": "^3.1.1",
-    "tw-animate-css": "^1.2.5",
+    "tw-animate-css": "^1.4.0",
     "zod": "^4.1.12",
     "zod-form-data": "^3.0.1"
   },
