--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -20,6 +20,7 @@
     "@react-router/fs-routes": "^7.9.4",
     "@react-router/node": "^7.9.2",
     "@react-router/serve": "^7.9.2",
+    "@tanstack/react-table": "^8.21.3",
     "async_hooks": "^1.0.0",
     "chargebee": "^3.14.0",
     "clsx": "^2.1.1",
@@ -40,6 +41,7 @@
     "postgres": "^3.4.7",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-hook-form": "^7.66.0",
     "react-router": "^7.9.5",
     "react-use-measure": "^2.1.7",
     "stripe": "^19.1.0",
