--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-collapsible": "^1.1.12",
     "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@react-router/express": "^7.9.4",
@@ -26,10 +27,12 @@
     "clsx": "^2.1.1",
     "compression": "^1.8.1",
     "country-to-currency": "^2.0.2",
+    "dayjs": "^1.11.19",
     "drizzle-orm": "^0.44.6",
     "drizzle-zod": "^0.8.3",
     "express": "^5.1.0",
     "fast-geoip": "^1.1.88",
+    "feed": "^5.1.0",
     "framer-motion": "^12.23.26",
     "geoip-lite": "^1.4.10",
     "isbot": "^5.1.31",
@@ -42,8 +45,11 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.66.0",
+    "react-markdown": "^10.1.0",
     "react-router": "^7.9.5",
     "react-use-measure": "^2.1.7",
+    "rehype-highlight": "^7.0.2",
+    "remark-gfm": "^4.0.1",
     "stripe": "^19.1.0",
     "tailwind-merge": "^3.3.1",
     "tailwind-variants": "^3.1.1",
