--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -35,6 +35,7 @@
     "feed": "^5.1.0",
     "framer-motion": "^12.23.26",
     "geoip-lite": "^1.4.10",
+    "input-otp": "^1.4.2",
     "isbot": "^5.1.31",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
