--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -37,6 +37,7 @@
     "geoip-lite": "^1.4.10",
     "input-otp": "^1.4.2",
     "isbot": "^5.1.31",
+    "jose": "^6.1.3",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
     "lucide-react": "^0.545.0",
