--- a/core/package.json
+++ b/core/package.json
@@ -5,7 +5,11 @@
   "exports": {
     ".": "./src/index.ts",
     "./*": "./src/*/index.ts",
-    "./*.ts": "./src/*.ts"
+    "./jwt/*": "./src/jwt/*.ts",
+    "./smtp/*": "./src/smtp/*.ts",
+    "./utils/*": "./src/utils/*.ts",
+    "./schema/*": "./src/schema/*.ts",
+    "./tradingview/*": "./src/tradingview/*.ts"
   },
   "dependencies": {
     "async_hooks": "^1.0.0",
@@ -14,7 +18,9 @@
     "drizzle-orm": "^0.44.6",
     "drizzle-zod": "^0.8.3",
     "express": "^5.1.0",
+    "jose": "^6.1.3",
     "morgan": "^1.10.1",
+    "nodemailer": "^7.0.12",
     "postgres": "^3.4.7",
     "tailwind-merge": "^3.3.1",
     "tailwind-variants": "^3.1.1",
@@ -25,6 +31,7 @@
     "@types/express": "^5.0.3",
     "@types/morgan": "^1.9.10",
     "@types/node": "^22.18.10",
+    "@types/nodemailer": "^7.0.4",
     "dotenv-cli": "^10.0.0",
     "drizzle-kit": "^0.31.5",
     "tsx": "^4.20.6",
