--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -27,6 +27,7 @@
     "clsx": "^2.1.1",
     "compression": "^1.8.1",
     "country-to-currency": "^2.0.2",
+    "date-fns": "^4.1.0",
     "dayjs": "^1.11.19",
     "drizzle-orm": "^0.44.6",
     "drizzle-zod": "^0.8.3",
