--- a/apps/smtp/tsconfig.json
+++ b/apps/smtp/tsconfig.json
@@ -1,12 +1,14 @@
 {
-    "extends": "../../tsconfig.react.json",
-    "include": [
-        "src/**/*"
-    ],
-    "compilerOptions": {
-        "outDir": "build",
-        "rootDir": "./src",
-        "noEmit": false,
-        "composite": true
-    }
+  "compilerOptions": {
+    "target": "ES2022",
+    "module": "ESNext",
+    "moduleResolution": "bundler",
+    "jsx": "react-jsx",
+    "strict": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "outDir": "dist",
+    "rootDir": "src"
+  },
+  "include": ["src/**/*"]
 }
