--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -8,7 +8,7 @@
     "dev": "dotenv -- node server.js"
   },
   "dependencies": {
-    "@bw/core": "workspace:*",
+    "@boswaves/core": "workspace:*",
     "@coingecko/cryptoformat": "^0.8.2",
     "@headlessui/react": "^2.2.9",
     "@radix-ui/react-checkbox": "^1.3.3",
