--- a/tsconfig.react.json
+++ b/tsconfig.react.json
@@ -8,11 +8,14 @@
             "path": "./core/tsconfig.json"
         },
         {
+            "path": "./apps/smtp/tsconfig.json"
+        },
+        {
             "path": "./apps/web/tsconfig.react.json"
         },
         {
             "path": "./apps/admin/tsconfig.react.json"
-        }
+        },
     ],
     "compilerOptions": {
         "composite": true,
