--- a/compose.prod.yaml
+++ b/compose.prod.yaml
@@ -39,7 +39,7 @@ services:
   #     - postgres
 
   postgres:
-    image: bw/postgres:latest
+    image: boswaves/postgres:latest
     container_name: bw-postgres
     build:
       context: ./services/postgres
@@ -77,10 +77,10 @@ services:
         condition: service_healthy
 
   web:
-    image: bw/website:latest
+    image: boswaves/website:latest
     container_name: bw-web
     build:
-      context: ./web
+      context: ./apps/web
       dockerfile: Dockerfile
     environment:
     - PG_PORT=5432
@@ -96,6 +96,28 @@ services:
     depends_on:
       postgres:
         condition: service_healthy
+
+  smtp:
+    image: boswaves/smtp:latest
+    container_name: bw-smtp
+    build:
+      context: ./apps/smtp
+      dockerfile: Dockerfile
+    environment:
+    - PG_PORT=5432
+    - PG_HOST=postgres
+    - PG_USERNAME=${PG_USERNAME}
+    - PG_PASSWORD=${PG_PASSWORD}
+    - PG_DATABASE=${PG_DATABASE}
+    networks:
+    - host_net
+    - postgres_net
+    ports:
+    - 3000:3000
+    depends_on:
+      postgres:
+        condition: service_healthy
+
 volumes:
   postgres_vol:
     driver: local
