--- a/apps/smtp/package.json
+++ b/apps/smtp/package.json
@@ -14,7 +14,7 @@
     "compression": "^1.8.1",
     "drizzle-orm": "^0.44.6",
     "express": "^5.1.0",
-    "lodash": "^4.17.21",
+    "kafkajs": "^2.2.4",
     "lodash-es": "^4.17.21",
     "morgan": "^1.10.1",
     "nodemailer": "^7.0.12",
@@ -29,10 +29,10 @@
     "@react-email/preview-server": "^5.1.1",
     "@tailwindcss/vite": "^4.1.13",
     "@types/compression": "^1.8.1",
-    "@types/express": "^5.0.3",
+    "@types/express": "^5.0.5",
     "@types/lodash": "^4.17.20",
     "@types/morgan": "^1.9.10",
-    "@types/node": "^22.18.10",
+    "@types/node": "^22.18.13",
     "@types/nodemailer": "^7.0.4",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
