--- a/services/smtp/proc/package.json
+++ b/services/smtp/proc/package.json
@@ -5,7 +5,7 @@
     "dev": "dotenv -- tsx --watch src/index.ts",
     "dev:email": "email dev --dir src/emails --port 3000",
     "build": "tsup",
-    "start": "node build/index.js"
+    "start": "node dist/index.js"
   },
   "dependencies": {
     "@react-email/components": "1.0.3",
