--- a/services/smtp/sdk/package.json
+++ b/services/smtp/sdk/package.json
@@ -1,16 +1,16 @@
 {
   "name": "@boswaves-inc/smtp-sdk",
   "type": "module",
-  "main": "./build/index.js",
-  "types": "./build/index.d.ts",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "exports": {
     ".": {
-      "types": "./build/index.d.ts",
-      "import": "./build/index.js"
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js"
     }
   },
   "files": [
-    "build"
+    "dist"
   ],
   "scripts": {
     "build": "dotenv -- tsc",
