--- a/services/smtp/package.json
+++ b/services/smtp/package.json
@@ -1,11 +1,10 @@
 {
     "private": true,
+    "name": "@boswaves-inc/smtp",
     "scripts": {
         "db:generate": "dotenv -- drizzle-kit generate",
         "db:migrate": "dotenv -- drizzle-kit migrate",
-        "db:update": "dotenv -- drizzle-kit up",
-        "db:seed": "dotenv -- tsx scripts/seed.ts",
-        "db:sync": "dotenv -- tsx scripts/sync.ts"
+        "db:update": "dotenv -- drizzle-kit up"
     },
     "dependencies": {
         "chargebee": "^3.14.0",
