--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
         "build": "turbo build",
         "clean": "rm -rf node_modules **/node_modules **/.turbo **/dist **/.next",
         "dev:smtp": "turbo dev --filter=@boswaves-inc/smtp-*...",
-        "dev:store": "turbo dev --filter=@boswaves-inc/webstore-*...",
+        "dev:webstore": "turbo dev --filter=@boswaves-inc/webstore-*...",
         "build:smtp": "turbo build --filter=@boswaves-inc/smtp-*...",
-        "build:store": "turbo build --filter=@boswaves-inc/webstore-*...",
+        "build:webstore": "turbo build --filter=@boswaves-inc/webstore-*...",
         "db:generate": "turbo db:generate",
         "db:migrate": "turbo db:migrate",
         "db:studio": "turbo db:studio",
