--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,85 +1,61 @@
 name: CI
 
 on:
-  pull_request:
-    branches: [main]
-  push:
-    branches: [main]
+    pull_request:
+        branches: [main]
+    push:
+        branches: [main, smtp, webstore]
 
 concurrency:
-  group: ${{ github.workflow }}-${{ github.ref }}
-  cancel-in-progress: ${{ github.ref != 'refs/heads/main' }}
+    group: ${{ github.workflow }}-${{ github.ref }}
+    cancel-in-progress: ${{ github.ref != 'refs/heads/main' }}
 
 jobs:
-  changes:
-    runs-on: ubuntu-latest
-    permissions:
-      pull-requests: read
-    outputs:
-      smtp: ${{ steps.filter.outputs.smtp }}
-      webstore: ${{ steps.filter.outputs.webstore }}
-    steps:
-      - uses: actions/checkout@v4
-      - uses: dorny/paths-filter@v3
-        id: filter
-        with:
-          filters: |
-            smtp:
-              - 'services/smtp/**'
-            webstore:
-              - 'services/webstore/**'
+    scope:
+        runs-on: ubuntu-latest
+        permissions:
+            contents: read
+            pull-requests: read
+        outputs:
+            smtp: ${{ steps.scope.outputs.smtp }}
+            webstore: ${{ steps.scope.outputs.webstore }}
+        steps:
+            - uses: actions/checkout@v4
+            - id: scope
+              uses: ./.github/actions/scope-ci
 
-  ci-smtp:
-    runs-on: ubuntu-latest
-    needs: changes
-    if: needs.changes.outputs.smtp == 'true'
-    steps:
-      - uses: actions/checkout@v4
+    ci-smtp:
+        name: SMTP
+        needs: scope
+        if: needs.scope.outputs.smtp == 'true'
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v4
+            - uses: ./.github/actions/node-pnpm
+            - run: pnpm run build:smtp
 
-      - uses: pnpm/action-setup@v4
-        with:
-          version: 9
+    ci-webstore:
+        name: Webstore
+        needs: scope
+        if: needs.scope.outputs.webstore == 'true'
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v4
+            - uses: ./.github/actions/node-pnpm
+            - run: pnpm run build:webstore
 
-      - uses: actions/setup-node@v4
-        with:
-          node-version: "20"
-          cache: "pnpm"
-
-      - run: pnpm install --frozen-lockfile
-      - run: pnpm build:smtp
-
-  ci-webstore:
-    runs-on: ubuntu-latest
-    needs: changes
-    if: needs.changes.outputs.webstore == 'true'
-    steps:
-      - uses: actions/checkout@v4
-
-      - uses: pnpm/action-setup@v4
-        with:
-          version: 9
-
-      - uses: actions/setup-node@v4
-        with:
-          node-version: "20"
-          cache: "pnpm"
-
-      - run: pnpm install --frozen-lockfile
-      - run: pnpm build:webstore
-
-  ci-ok:
-    runs-on: ubuntu-latest
-    needs:
-      - changes
-      - ci-smtp
-      - ci-webstore
-    if: always()
-    steps:
-      - name: Check CI status
-        run: |
-          if [[ "${{ needs.ci-smtp.result }}" =~ ^(failure|cancelled)$ ]] || \
-            [[ "${{ needs.ci-webstore.result }}" =~ ^(failure|cancelled)$ ]]; then
-            echo "CI failed"
-            exit 1
-          fi
-          echo "CI passed"
+    ci-ok:
+        if: always()
+        runs-on: ubuntu-latest
+        needs: [scope, ci-smtp, ci-webstore]
+        steps:
+            - name: Check CI status
+              shell: bash
+              run: |
+                  set -euo pipefail
+                  if [[ "${{ needs.ci-smtp.result }}" =~ ^(failure|cancelled)$ ]] || \
+                     [[ "${{ needs.ci-webstore.result }}" =~ ^(failure|cancelled)$ ]]; then
+                    echo "CI failed"
+                    exit 1
+                  fi
+                  echo "CI passed"
