--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,10 @@ on:
     push:
         branches: [main, smtp, webstore]
 
+permissions:
+  contents: read
+  pull-requests: read
+
 concurrency:
     group: ${{ github.workflow }}-${{ github.ref }}
     cancel-in-progress: ${{ github.ref != 'refs/heads/main' }}
@@ -45,6 +49,7 @@ jobs:
             - run: pnpm run build:webstore
 
     ci-ok:
+        name: CI OK
         if: always()
         runs-on: ubuntu-latest
         needs: [scope, ci-smtp, ci-webstore]
