--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,7 @@ on:
     pull_request:
         branches: [main]
     push:
-        branches: [main, smtp, webstore]
+        branches: [main]
 
 permissions:
   contents: read
@@ -17,9 +17,6 @@ concurrency:
 jobs:
     scope:
         runs-on: ubuntu-latest
-        permissions:
-            contents: read
-            pull-requests: read
         outputs:
             smtp: ${{ steps.scope.outputs.smtp }}
             webstore: ${{ steps.scope.outputs.webstore }}
