--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -24,7 +24,7 @@ jobs:
             - uses: actions/checkout@v4
 
             - id: scope
-              uses: ./.github/actions/scope-ci
+              uses: ./.github/actions/scope
 
     publish-smtp:
         needs: scope
@@ -33,19 +33,13 @@ jobs:
         steps:
             - uses: actions/checkout@v4
               with:
-                ref: ${{ github.event.workflow_run.head_sha }}
-                
-            - uses: docker/login-action@v3
-              with:
-                  registry: ghcr.io
-                  username: ${{ github.actor }}
-                  password: ${{ secrets.GITHUB_TOKEN }}
+                  ref: ${{ github.event.workflow_run.head_sha }}
 
-            - uses: docker/build-push-action@v5
+            - uses: ./.github/actions/docker
               with:
+                  token: ${{ secrets.GITHUB_TOKEN }}
                   context: ./services/smtp
-                  push: true
-                  tags: ghcr.io/${{ github.repository }}/smtp:latest
+                  image: boswaves-inc/smtp
 
     publish-webstore:
         needs: scope
@@ -54,16 +48,10 @@ jobs:
         steps:
             - uses: actions/checkout@v4
               with:
-                ref: ${{ github.event.workflow_run.head_sha }}
+                  ref: ${{ github.event.workflow_run.head_sha }}
 
-            - uses: docker/login-action@v3
+            - uses: ./.github/actions/docker
               with:
-                  registry: ghcr.io
-                  username: ${{ github.actor }}
-                  password: ${{ secrets.GITHUB_TOKEN }}
-
-            - uses: docker/build-push-action@v5
-              with:
+                  token: ${{ secrets.GITHUB_TOKEN }}
                   context: ./services/webstore
-                  push: true
-                  tags: ghcr.io/${{ github.repository }}/webstore:latest
+                  image: boswaves-inc/webstore
