--- a/infra/modules/directus.yaml
+++ b/infra/modules/directus.yaml
@@ -3,34 +3,35 @@ name: bw-smtp
 services:
   directus:
     image: directus/directus:latest
+    container_name: bw-directus
     restart: always
     ports:
-    - "8055:8055"
+    - 8055:8055
     environment:
-      KEY: "replace-with-random-string"
-      SECRET: "replace-with-random-string"
+      KEY: replace-with-random-string
+      SECRET: replace-with-random-string
 
       # Database (PostgreSQL recommended)
-      DB_CLIENT: "pg"
-      DB_HOST: "postgres"
-      DB_PORT: "5432"
-      DB_DATABASE: "directus"
-      DB_USER: "directus"
-      DB_PASSWORD: "directus"
+      DB_PORT: 5432
+      DB_CLIENT: pg
+      DB_HOST: postgres
+      DB_USER: directus
+      DB_DATABASE: directus
+      DB_PASSWORD: ${PG_DIRECTUS_PASSWORD}
 
       # Admin user
-      ADMIN_EMAIL: "admin@example.com"
-      ADMIN_PASSWORD: "d1r3ctu5"
+      ADMIN_EMAIL: admin@example.com
+      ADMIN_PASSWORD: d1r3ctu5
 
       # Public URL
-      PUBLIC_URL: "https://cdn.yourdomain.com"
+      PUBLIC_URL: https://cdn.yourdomain.com
 
       # File storage
-      STORAGE_LOCATIONS: "local"
-      STORAGE_LOCAL_ROOT: "./uploads"
+      STORAGE_LOCATIONS: local
+      STORAGE_LOCAL_ROOT: ./uploads
 
       # Image transformations
-      ASSETS_TRANSFORM_IMAGE_MAX_DIMENSION: "6000"
+      ASSETS_TRANSFORM_IMAGE_MAX_DIMENSION: 6000
 
     volumes:
     - directus_vol:/uploads:/directus/uploads
