--- a/services/webstore/core/package.json
+++ b/services/webstore/core/package.json
@@ -12,6 +12,7 @@
     "./tradingview/*": "./src/tradingview/*.ts"
   },
   "dependencies": {
+    "@directus/sdk": "^20.3.0",
     "async_hooks": "^1.0.0",
     "chargebee": "^3.14.0",
     "compression": "^1.8.1",
@@ -21,6 +22,7 @@
     "jose": "^6.1.3",
     "morgan": "^1.10.1",
     "nodemailer": "^7.0.12",
+    "p-queue": "^9.0.1",
     "postgres": "^3.4.7",
     "tailwind-merge": "^3.3.1",
     "tailwind-variants": "^3.1.1",
