--- a/services/webstore/web/package.json
+++ b/services/webstore/web/package.json
@@ -45,6 +45,7 @@
     "lucide-react": "^0.545.0",
     "maxmind": "^5.0.1",
     "morgan": "^1.10.1",
+    "p-queue": "^9.0.1",
     "postgres": "^3.4.7",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
