--- a/services/webstore/web/tsconfig.react.json
+++ b/services/webstore/web/tsconfig.react.json
@@ -5,7 +5,8 @@
     "app/**/*",
     "app/**/.server/**/*",
     "app/**/.client/**/*",
-    "server/**/*"
+    "server/**/*",
+    "scripts/**/*"
   ],
   "references": [
     {
