--- a/infra/modules/directus.yaml
+++ b/infra/modules/directus.yaml
@@ -47,6 +47,7 @@ services:
     volumes:
     - directus_vol:/uploads:/directus/uploads
     - directus_vol:/extensions:/directus/extensions
+    - ../runtime/directus/snapshots:/directus/snapshots
     networks:
     - postgres_net
     - shared_net
