--- a/services/webstore/web/package.json
+++ b/services/webstore/web/package.json
@@ -5,12 +5,14 @@
   "scripts": {
     "build": "react-router build",
     "start": "node server.js",
+    "gen:types": "dotenv -- tsx ./scripts/generate.ts",
     "dev": "dotenv -- node server.js"
   },
   "dependencies": {
     "@boswaves-inc/smtp-sdk": "workspace:*",
     "@boswaves-inc/webstore-core": "workspace:*",
     "@coingecko/cryptoformat": "^0.8.2",
+    "@directus/visual-editing": "^1.1.0",
     "@headlessui/react": "^2.2.9",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-collapsible": "^1.1.12",
@@ -73,6 +75,7 @@
     "@types/node": "^22.18.10",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
+    "directus-sdk-typegen": "^0.2.1",
     "dotenv-cli": "^10.0.0",
     "drizzle-kit": "^0.31.5",
     "tailwindcss": "^4.1.13",
