--- a/services/webstore/web/tsconfig.node.json
+++ b/services/webstore/web/tsconfig.node.json
@@ -2,7 +2,7 @@
   "extends": "../tsconfig.node.json",
   "include": [
     "server.js",
-    "vite.config.ts"
+    "vite.config.ts",
   ],
   "compilerOptions": {
     "composite": true,
