--- a/services/smtp/proc/package.json
+++ b/services/smtp/proc/package.json
@@ -2,10 +2,11 @@
   "name": "@boswaves-inc/smtp-proc",
   "private": true,
   "scripts": {
+    "build": "tsup",
+    "start": "node dist/index.js",
     "dev": "dotenv -- tsx --watch src/index.ts",
     "dev:email": "email dev --dir src/emails --port 3000",
-    "build": "tsup",
-    "start": "node dist/index.js"
+    "gen:schema": "tsx scripts/gen_schema.ts"
   },
   "dependencies": {
     "@react-email/components": "1.0.3",
@@ -26,8 +27,10 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-email": "^5.1.1",
+    "string-transform": "^21.9.19",
     "zod": "^4.3.4",
-    "zod-form-data": "^3.0.1"
+    "zod-form-data": "^3.0.1",
+    "zod-to-ts": "^2.0.0"
   },
   "devDependencies": {
     "@react-email/preview-server": "^5.1.1",
@@ -36,13 +39,14 @@
     "@types/express": "^5.0.5",
     "@types/lodash": "^4.17.20",
     "@types/morgan": "^1.9.10",
-    "@types/node": "^22.18.13",
+    "@types/node": "^22.19.3",
     "@types/nodemailer": "^7.0.4",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.1.2",
     "dotenv-cli": "^10.0.0",
     "tailwindcss": "^4.1.13",
+    "ts-morph": "^27.0.2",
     "tsup": "^8.5.1",
     "tsx": "^4.20.6",
     "typescript": "^5.9.2",
