--- a/services/smtp/sdk/tsconfig.json
+++ b/services/smtp/sdk/tsconfig.json
@@ -3,8 +3,10 @@
     "include": [
         "src/**/*"
     ],
+    
     "compilerOptions": {
         "target": "ES2022",
+        "composite": true,
         "strict": true,
         "jsx": "react-jsx",
         "module": "ES2022",
