--- a/package.json
+++ b/package.json
@@ -2,20 +2,7 @@
     "name": "boswaves-inc",
     "private": true,
     "scripts": {
-        "dev": "turbo dev",
-        "test": "turbo test",
-        "build": "turbo build",
-        "clean": "rm -rf node_modules **/node_modules **/.turbo **/dist **/.next",
-        "dev:smtp": "turbo dev --filter=@boswaves-inc/smtp-*...",
-        "dev:webstore": "turbo dev --filter=@boswaves-inc/webstore-*...",
-        "build:smtp": "turbo build --filter=@boswaves-inc/smtp-*...",
-        "build:webstore": "turbo build --filter=@boswaves-inc/webstore-*...",
-        "db:generate": "turbo db:generate",
-        "db:migrate": "turbo db:migrate",
-        "db:studio": "turbo db:studio",
-        "infra:up": "cd infra && docker compose up -d",
-        "infra:down": "cd infra && docker compose down",
-        "infra:logs": "cd infra && docker compose logs -f"
+        "clean": "rm -rf node_modules **/node_modules **/.turbo **/dist **/.next"
     },
     "devDependencies": {
         "turbo": "^2.0.0",
