--- a/services/webstore/web/tsconfig.react.json
+++ b/services/webstore/web/tsconfig.react.json
@@ -10,7 +10,7 @@
   ],
   "references": [
     {
-      "path": "../core"
+      "path": "../core/tsconfig.json"
     }
   ],
   "compilerOptions": {
