--- a/turbo.json
+++ b/turbo.json
@@ -1,8 +1,17 @@
 {
     "$schema": "https://turbo.build/schema.json",
     "tasks": {
+        "generate": {
+            "dependsOn": [
+                "^generate"
+            ],
+            "outputs": [
+                "src/generated/**"
+            ]
+        },
         "build": {
             "dependsOn": [
+                "generate",
                 "^build"
             ],
             "outputs": [
