--- a/services/webstore/admin/tsconfig.react.json
+++ b/services/webstore/admin/tsconfig.react.json
@@ -1,5 +1,5 @@
 {
-  "extends": "../tsconfig.react.json",
+  "extends": "./tsconfig.json",
   "include": [
     ".react-router/types/**/*",
     "app/**/*",
@@ -14,6 +14,20 @@
   ],
   "compilerOptions": {
     "baseUrl": ".",
+    "composite": true,
+    "strict": true,
+    "noEmit": false,
+    "jsx": "react-jsx",
+    "target": "ES2022",
+    "module": "ES2022",
+    "esModuleInterop": true,
+    "resolveJsonModule": true,
+    "moduleResolution": "bundler",
+    "lib": [
+      "DOM",
+      "DOM.Iterable",
+      "ES2022"
+    ],
     "types": [
       "vite/client"
     ],
