--- a/services/webstore/web/tsconfig.node.json
+++ b/services/webstore/web/tsconfig.node.json
@@ -1,10 +1,11 @@
 {
-  "extends": "../tsconfig.node.json",
+  "extends": "./tsconfig.json",
   "include": [
     "server.js",
     "vite.config.ts",
   ],
   "compilerOptions": {
+    
     "composite": true,
     "strict": true,
     "types": [
